# aSe0vBB

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements3.txt  runAllFields.sh  selena.py
EM Analysis/: bias_voltage_analysis.py  coplanar_spacing_analysis.py  plot.py  plots.C  plotsStrip.C  polymide_kapton_analysis.py  real_detector.py  small_scale_planar_bias_potential.py  tiered_coplanar_analysis.py  tiered_kapton_weighted_potentials.py
carrierproduction/: config.txt  kapton_coplanar_electrode_signal.py  noise_fluctuations.py  particledata.py  processedPulse.py  seleniumconfig.py
carrierproduction/analysis/: event_noise_variation_plots.py  freq_response.py  pixel_detector_pulse_shape_analysis.py  pixel_spectra_analysis.py  pulseAnalysis.py  wehpVEnergy.py
carrierproduction/config/: config_15vum.txt  config_20vum.txt  config_25vum.txt  config_30vum.txt  config_35vum.txt  config_40vum.txt  config_45vum.txt  config_50vum.txt
particle/analysis/: CMakeLists.txt  interactive.c  main.cxx
particle/analysis/include/: betaDirection.hh  seleniumConstants.hh
particle/analysis/src/: betaDirection.cxx
particle/selenium/: 122.mac  136.mac  14.mac  CMakeLists.txt  buildInstrustions.sh  plotCo57.c  plotHist.c  selenium.cc
particle/selenium/include/: DAMICPhysicsList.hh  DAMICPhysicsListLivermore.hh  SeleniumActionInitialization.hh  SeleniumAnalysis.hh  SeleniumDetectorConstruction.hh  SeleniumEventAction.hh  SeleniumHit.hh  SeleniumPhysicsList.hh  SeleniumPrimaryGeneratorAction.hh  SeleniumRunAction.hh  SeleniumSD.hh  SeleniumSteppingAction.hh  SimulationSettings.hh
particle/selenium/src/: DAMICPhysicsList.cc  DAMICPhysicsListLivermore.cc  SeleniumActionInitialization.cc  SeleniumDetectorConstruction.cc  SeleniumEventAction.cc  SeleniumHit.cc  SeleniumPhysicsList.cc  SeleniumPrimaryGeneratorAction.cc  SeleniumRunAction.cc  SeleniumSD.cc  SeleniumSteppingAction.cc
